--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
           <i class="fa-brands fa-twitter"></i>
         </a>
       </div>
-      <p>Developed by Harshdeep Singh in FSD Training</p>
+      <p>Developed by Rachit Agarwal in FSD Training</p>
     </div>
 
     <script
